@@ -122,17 +122,7 @@ public class Loader extends org.globus.cog.karajan.Loader {
                 System.exit(4);
             }
 
-            /**
-             * This deprecation should stay until at least after Swift 0.4 is
-             * released; sometime after that, this test and the subsequent
-             * support for .dtm extensions should be removed.
-             */
-            if (project.endsWith(".dtm")) {
-                logger
-                    .warn("Source file extension .dtm is deprecated and will not be supported in future versions. Use .swift extension instead.");
-            }
-
-            if (project.endsWith(".dtm") || project.endsWith(".swift")) {
+            if (project.endsWith(".swift")) {
                 try {
                     project = compile(project);
                 }
@@ -344,7 +334,7 @@ public class Loader extends org.globus.cog.karajan.Loader {
         ap.setExecutableName("swift");
         ap
             .addOption(ArgumentParser.DEFAULT,
-                "A file (.dtm or .kml) to execute", "file",
+                "A file (.swift or .kml) to execute", "file",
                 ArgumentParser.OPTIONAL);
 
         ap.addFlag(ARG_HELP, "Display usage information");
